refactor db structure, add rake task and service for importing recipes

--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -39,7 +39,7 @@
         <td><%= recipe.image %></td>
         <td><%= recipe.tags %></td>
         <td><%= recipe.ingredients %></td>
-        <td><%= recipe.author_id %></td>
+        <td><%= recipe.author %></td>
         <td><%= link_to 'Show', recipe %></td>
         <td><%= link_to 'Edit', edit_recipe_path(recipe) %></td>
         <td><%= link_to 'Destroy', recipe, method: :delete, data: { confirm: 'Are you sure?' } %></td>
