--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -67,7 +67,7 @@
 
 <p>
   <strong>Author:</strong>
-  <%= @recipe.author_id %>
+  <%= @recipe.author %>
 </p>
 
 <%= link_to 'Edit', edit_recipe_path(@recipe) %> |
