--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -2,23 +2,36 @@
 
 <h1>Recipes</h1>
 
+<%= simple_form_for :search, url: root_path, method: 'GET', html: { class: 'form-inline' } do |f| %>
+  <%= f.input :name, input_html: { value: @search_params['name'] } %>
+  <%= f.input :author, input_html: { value: @search_params['author'] } %>
+  <%= f.input :tags, input_html: { value: @search_params['tags'] } %>
+  <%= f.input :ingredients, input_html: { value: @search_params['ingredients'] } %>
+  <%= f.input :difficulty, input_html: { value: @search_params['difficulty'] } %>
+  <%= f.input :prep_time, as: :numeric, input_html: { min: 0, value: @search_params['prep_time'] }, label: 'At the most prep time' %>
+  <%= f.input :cook_time, as: :numeric, input_html: { min: 0 , value: @search_params['cook_time']}, label: 'At the most cook time' %>
+  <%= f.input :total_time, as: :numeric, input_html: { min: 0, value: @search_params['total_time'] } , label: 'At the most total time' %>
+  <%= f.input :rate, as: :numeric, input_html: { min: 0, max: 5, step: 0.1, value: @search_params['rate'] } , label: 'Rate at least' %>
+  <%= f.submit "Search", class: "btn btn-primary" %>
+<% end %>
+<br>
+
 <table>
   <thead>
     <tr>
-      <th>Rate</th>
-      <th>Author tip</th>
-      <th>Prep time</th>
-      <th>Budget</th>
-      <th>Name</th>
-      <th>Difficulty</th>
-      <th>People quantity</th>
-      <th>Cook time</th>
-      <th>Total time</th>
-      <th>Nb comments</th>
-      <th>Image</th>
+      <th><%= sortable('name') %></th>
+      <th><%= sortable('rate') %></th>
+      <th><%= sortable('ingredients') %></th>
+      <th><%= sortable('author') %></th>
+      <th><%= sortable('author_tip') %></th>
+      <th><%= sortable('prep_time') %></th>
+      <th><%= sortable('cook_time') %></th>
+      <th><%= sortable('total_time') %></th>
+      <th><%= sortable('budget') %></th>
+      <th><%= sortable('difficulty') %></th>
+      <th><%= sortable('people_quantity', 'Number of people') %></th>
+      <th><%= sortable('nb_comments', 'Number of comments') %></th>
       <th>Tags</th>
-      <th>Ingredients</th>
-      <th>Author</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -26,20 +39,22 @@
   <tbody>
     <% @recipes.each do |recipe| %>
       <tr>
-        <td><%= recipe.rate %></td>
-        <td><%= recipe.author_tip %></td>
-        <td><%= recipe.prep_time %></td>
-        <td><%= recipe.budget %></td>
         <td><%= recipe.name %></td>
-        <td><%= recipe.difficulty %></td>
-        <td><%= recipe.people_quantity %></td>
-        <td><%= recipe.cook_time %></td>
-        <td><%= recipe.total_time %></td>
-        <td><%= recipe.nb_comments %></td>
-        <td><%= recipe.image %></td>
-        <td><%= recipe.tags %></td>
+        <td><%= recipe.rate %></td>
         <td><%= recipe.ingredients %></td>
         <td><%= recipe.author %></td>
+        <td><%= recipe.author_tip %></td>
+        <td><%= recipe.prep_time %></td>
+        <td><%= recipe.cook_time %></td>
+        <td><%= recipe.total_time %></td>
+        <td><%= recipe.budget %></td>
+        <td><%= recipe.difficulty %></td>
+        <td><%= recipe.people_quantity %></td>
+
+        <td><%= recipe.nb_comments %></td>
+        <td><%= recipe.tags %></td>
+
+
         <td><%= link_to 'Show', recipe %></td>
         <td><%= link_to 'Edit', edit_recipe_path(recipe) %></td>
         <td><%= link_to 'Destroy', recipe, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -47,7 +62,7 @@
     <% end %>
   </tbody>
 </table>
-
+<%= paginate @recipes %>
 <br>
 
 <%= link_to 'New Recipe', new_recipe_path %>
