--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -3,25 +3,24 @@
 <h1>Recipes</h1>
 
 <%= simple_form_for :search, url: root_path, method: 'GET', html: { class: 'form-inline' } do |f| %>
-  <%= render partial: 'form_fields', locals: { f: f } %>
+  <%= render partial: 'search_form_fields', locals: { f: f } %>
 <% end %>
 <br>
 
 <table>
   <thead>
     <tr>
-      <th><%= sortable('name') %></th>
-      <th><%= sortable('rate') %></th>
-      <th><%= sortable('ingredients') %></th>
-      <th><%= sortable('author') %></th>
-      <th><%= sortable('author_tip') %></th>
-      <th><%= sortable('prep_time') %></th>
-      <th><%= sortable('cook_time') %></th>
-      <th><%= sortable('total_time') %></th>
-      <th><%= sortable('budget') %></th>
-      <th><%= sortable('difficulty') %></th>
-      <th><%= sortable('people_quantity', 'Number of people') %></th>
-      <th><%= sortable('nb_comments', 'Number of comments') %></th>
+      <th>Name</th>
+      <th>Ingredients</th>
+      <th>Author</th>
+      <th>Difficulty</th>
+      <th>Preparation Time</th>
+      <th>Cook Time</th>
+      <th>Total Time</th>
+      <th>Budget</th>
+      <th>Number of people</th>
+      <th>Number of comments</th>
+      <th>Rate</th>
       <th>Tags</th>
       <th colspan="3"></th>
     </tr>
@@ -31,18 +30,16 @@
     <% @recipes.each do |recipe| %>
       <tr>
         <td><%= recipe.name %></td>
-        <td><%= recipe.rate %></td>
         <td><%= recipe.ingredients %></td>
         <td><%= recipe.author %></td>
-        <td><%= recipe.author_tip %></td>
+        <td><%= recipe.difficulty %></td>
         <td><%= recipe.prep_time %></td>
         <td><%= recipe.cook_time %></td>
         <td><%= recipe.total_time %></td>
         <td><%= recipe.budget %></td>
-        <td><%= recipe.difficulty %></td>
         <td><%= recipe.people_quantity %></td>
-
         <td><%= recipe.nb_comments %></td>
+        <td><%= recipe.rate %></td>
         <td><%= recipe.tags %></td>
 
 
